--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,14 +1,5 @@
-:root {
-    font-family: "Montserrat", sans-serif;
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-text-size-adjust: 100%;
-}
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+@use "./variables";
+@use "./base";
+@use "./flex";
+@use "./utiles";
+@use "./debug";
