add header and footer

--- a/src/assets/styles/_utiles.scss
+++ b/src/assets/styles/_utiles.scss
@@ -45,3 +45,23 @@
 .mb-30 {
     margin-bottom: 30px;
 }
+
+.mr-5 {
+    margin-right: 5px;
+}
+
+.mr-10 {
+    margin-right: 10px;
+}
+
+.mr-15 {
+    margin-right: 15px;
+}
+
+.mr-20 {
+    margin-right: 20px;
+}
+
+.mr-30 {
+    margin-right: 30px;
+}
