--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -6,4 +6,5 @@
     --box-shadow: 0 6px 9px 0 rgb(0 0 0 / 15%);
     --box-shadow-nav: rgb(0 0 0 / 22%) 0 2px 18px 0;
     --text-color: #444;
+    --text-color-light: #f1f1f1;
 }
