--- a/src/assets/styles/_debug.scss
+++ b/src/assets/styles/_debug.scss
@@ -1,3 +1,4 @@
+@use "./mixins" as mixin;
 .b1 {
     background-color: red;
     border: 1px solid rgb(114, 0, 0);
@@ -16,4 +17,22 @@
 .b4 {
     background-color: purple;
     border: 1px solid rgb(77, 0, 77);
+}
+
+.br {
+    @include mixin.xs {
+        border: 2px solid red;
+    }
+    @include mixin.sm {
+        border: 2px solid green;
+    }
+    @include mixin.md {
+        border: 2px solid blue;
+    }
+    @include mixin.lg {
+        border: 2px solid orange;
+    }
+    @include mixin.xl {
+        border: 2px solid purple;
+    }
 }
